updated collapse sturctue to require click to close. solves the issue of the columns accordions acting as different units.

--- a/src/_themes/espnplus/scss/_global_league_accordion.scss
+++ b/src/_themes/espnplus/scss/_global_league_accordion.scss
@@ -57,7 +57,6 @@ section.league-toc {
                     width: 100%;
                     max-width: 100%;
                     margin: 0 0 1.282rem 0;
-                    margin-top: auto;
                     padding: 0;
                     background-color: transparent;
                     border: 0px;
@@ -135,17 +134,6 @@ section.league-toc {
 
                     } //.card-body
                 } // .card
-
-                @media (max-width: 767px) { // mobile
-                    .card {
-                        display: block;
-                        width: 100%;
-                        max-width: 100%;
-                        margin: .5rem 0;
-                        padding: 0;
-                        text-align: center;
-                    } // .card 
-                } // max-width: 767px
                 
 
                 &:nth-child(odd) {
@@ -166,15 +154,31 @@ section.league-toc {
 
             @media (max-width: 767px) { // mobile
                 .accordion {
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    margin: .5rem 0;
+                    display: block;
+                    width: 100%;
+                    max-width: 100%;
+                    margin: 0 0 .5rem 0;
                     padding: 0;
-                } // .accordion {  
-            } // max-width: 767px
+                    text-align: center;
 
+                    &:last-child {
+                        margin: 0 0 0 0;
+                    }
+                } // .accordion 
+                
+            } // max-width: 767px
         } // .accordion-container
+
+        @media (max-width: 767px) { // mobile
+            .accordion-container {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                margin: .5rem 0;
+                padding: 0;
+
+            } // .accordion-container
+        } // max-width: 767px
 
     } // .container
 
